--- a/src/contacto.njk
+++ b/src/contacto.njk
@@ -5,7 +5,7 @@ permalink: "/contacto/index.html"
 {% extends "src/base.njk" %}
 
 {% block head %}
-<title>Data Dataverso - Contacto</title>
+<title>Lab Municipal - Contacto</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {% endblock %}
 
