--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -15,4 +15,35 @@ tags:
 {% endblock %}
 
 {% block content %}
+
+    <!-- ====== Hero Start ====== -->
+    <section class="ud-hero" id="home">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
+                <h1 class="ud-hero-title">
+                  {{municipio.municipio}}
+                </h1>
+                <p class="ud-hero-desc">
+                  {{municipio.departamento}}/{{municipio.municipio}}
+                </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!-- ====== Hero End ====== -->
+
+    <section id="" class="ud-section">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-12">
+        
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
