--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -11,7 +11,7 @@ tags:
 {% extends "src/base.njk" %}
 
 {% block head %}
-    <title>Lab Municipal | Municipio</title>
+    <title>Lab Municipal | {{municipio.municipio}}</title>
 {% endblock %}
 
 {% block content %}
