graficas de poblacion

--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -2824,14 +2824,14 @@ hr{
   align-items: center;
 }
 
-#poblacionSexoChart, #gestionMunicipalChart, #transparenciaChart {
+#poblacionSexoChart, #poblacionSexoChart2, #poblacionAreaChart, #poblacionAreaChart2, #gestionMunicipalChart, #transparenciaChart, #poblacionPuebloChart {
   width: 70% !important;  /* Ajusta el canvas al 80% del contenedor */
   height: auto !important; /* Mantén la proporción del gráfico */
   margin: auto;
 }
 
 @media (max-width: 767px) {
-  #poblacionSexoChart, #gestionMunicipalChart, #transparenciaChart {
+  #poblacionSexoChart, #poblacionSexoChart2, #poblacionAreaChart, #poblacionAreaChart2, #gestionMunicipalChart, #transparenciaChart, #poblacionPuebloChart {
     width: 100% !important;  /* Ajusta el canvas al 80% del contenedor */
     height: auto !important; /* Mantén la proporción del gráfico */
     margin: auto;
