--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -2824,14 +2824,18 @@ hr{
   align-items: center;
 }
 
-#poblacionSexoChart, #poblacionSexoChart2, #poblacionAreaChart, #poblacionAreaChart2, #gestionMunicipalChart, #transparenciaChart, #poblacionPuebloChart {
+#poblacionSexoChart, #poblacionSexoChart2, #poblacionAreaChart, #poblacionAreaChart2, 
+#gestionMunicipalChart, #transparenciaChart, #poblacionPuebloChart, #poblacionAlfabetismoChart,
+#poblacionAsistenciaEscolarChart {
   width: 70% !important;  /* Ajusta el canvas al 80% del contenedor */
   height: auto !important; /* Mantén la proporción del gráfico */
   margin: auto;
 }
 
 @media (max-width: 767px) {
-  #poblacionSexoChart, #poblacionSexoChart2, #poblacionAreaChart, #poblacionAreaChart2, #gestionMunicipalChart, #transparenciaChart, #poblacionPuebloChart {
+  #poblacionSexoChart, #poblacionSexoChart2, #poblacionAreaChart, #poblacionAreaChart2, 
+  #gestionMunicipalChart, #transparenciaChart, #poblacionPuebloChart, #poblacionAlfabetismoChart,
+  #poblacionAsistenciaEscolarChart {
     width: 100% !important;  /* Ajusta el canvas al 80% del contenedor */
     height: auto !important; /* Mantén la proporción del gráfico */
     margin: auto;
