--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -124,7 +124,7 @@ tags:
             </div>
 
 			<div class="row align-items-center mb-4">
-                <div class="col-lg-12">
+                <div id="transparencia" class="col-lg-12">
                     <div class="cuadro_titulo">
                         <h3>Transparencia</h3>
                     </div>
@@ -316,6 +316,18 @@ tags:
                             <!-- Añadir un canvas para la gráfica -->
                             <canvas id="poblacionLugarEstudioChart"></canvas>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center mb-4">
+                <div class="col-lg-12">
+                    <div class="cuadro_titulo">
+                        <h3>Economía</h3>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="row ">
                     </div>
                 </div>
             </div>
