--- a/src/base.njk
+++ b/src/base.njk
@@ -1,203 +1,159 @@
-<!-- =========
-
-	Template Name: Play
-	Author: UIdeck
-	Author URI: https://uideck.com/
-	Support: https://uideck.com/support/
-	Version: 1.1
-
-========== -->
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html dir="ltr" lang="es-ES">
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="author" content="Red Ciudadana" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="Play - Free Open Source HTML Bootstrap Template by UIdeck">
-    <meta name="description" content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team">
+	<link rel="icon" href="/assets/img/redciudadana.png" type="image/png">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://uideck.com/play/">
-    <meta property="og:title" content="Play - Free Open Source HTML Bootstrap Template by UIdeck">
-    <meta property="og:description" content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team">
-    <meta property="og:image" content="https://uideck.com/wp-content/uploads/2021/09/play-meta-bs.jpg">
+	<!-- Stylesheets
+	============================================= -->
+	<link rel="stylesheet" href="/assets/css/bootstrap.css" type="text/css" />
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<link rel="stylesheet" href="/assets/css/maingrid.css" type="text/css" />
+	<link rel="stylesheet" href="/assets/css/font-icons.css" type="text/css" />
+	<link rel="stylesheet" href="/assets/css/animate.css" type="text/css" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://uideck.com/play/">
-    <meta property="twitter:title" content="Play - Free Open Source HTML Bootstrap Template by UIdeck">
-    <meta property="twitter:description" content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team">
-    <meta property="twitter:image" content="https://uideck.com/wp-content/uploads/2021/09/play-meta-bs.jpg">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
-    <!--====== Favicon Icon ======-->
-    <link
-      rel="shortcut icon"
-      href="/assets/images/redciudadana.png"
-      type="image/svg"
-    />
-
-    <!-- ===== All CSS files ===== -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/css/animate.css" />
-    <link rel="stylesheet" href="/assets/css/lineicons.css" />
-    <link rel="stylesheet" href="/assets/css/ud-styles.css" />
+	<!-- FontAwesome -->
+	<!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     {% block head %}
     {% endblock %}
-  </head>
-  <body>
-    <!-- ====== Header Start ====== -->
-    <header class="ud-header">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand" href="/index.html">
-                <img src="/assets/images/logo/LOGO-RED_BLANCO.png" alt="Logo" />
-              </a>
-              <button class="navbar-toggler">
-                <span class="toggler-icon"> </span>
-                <span class="toggler-icon"> </span>
-                <span class="toggler-icon"> </span>
-              </button>
 
-              <div class="navbar-collapse">
-                <ul id="nav" class="navbar-nav mx-auto">
+</head>
 
-                  <li class="nav-item">
-                    <a href="/index.html">Inicio</a>
-                  </li>
+<body class="stretched search-overlay">
+	<!-- Preloader Start -->
+	<!-- <div id="preloader-active">
+		<div class="preloader d-flex align-items-center justify-content-center">
+			<div class="preloader-inner position-relative">
+				<div class="text-center">
+					<img src="/assets/img/loader.gif" style="width:50%;height:auto;margin:auto" alt="" />
+				</div>
+			</div>
+		</div>
+	</div> -->
+	<!-- Document Wrapper
+	============================================= -->
+	<div id="wrapper" class="clearfix">
 
-                  <li class="nav-item">
-                    <a  href="/conjuntos/index.html">Conjuntos</a>
-                  </li>
+		<!-- Header
+		============================================= -->
+		<header id="header" class="full-header header-size-md" data-mobile-sticky="true" style="border:none!important">
+			<div id="header-wrap">
+				<div class="container" >				
+					<div class="header-row justify-content-lg-between container" style="padding: 0;">
 
-                  <li class="nav-item">
-                    <a  href="/contacto/index.html">Contacto</a>
-                  </li>
-  
-                </ul>
-              </div>
+						<!-- Logo
+						============================================= -->
+						<div id="logo" style="border:none!important">
+							<a href="/index.html" class="standard-logo"><img style="padding:5% 0" src="/assets/images/logo/LOGO-RED_NEGRO.png" alt="Canvas Logo"></a>
+							<a href="/index.html" class="retina-logo"><img style="padding:5% 0" src="/assets/images/logo/LOGO-RED_NEGRO.png" alt="Canvas Logo"></a>
+						</div><!-- #logo end -->
 
-              <div class="navbar-btn d-none d-sm-inline-block">
-                <div class="header-icon header-02-icon f-right">
-                  <a class="redes" target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
-                  <a class="redes" target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
-                  <a class="redes" target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
-                  <a class="redes" target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
-                  <a class="redes" target="_blank" href="https://www.youtube.com/channel/UCQwc62j7beStZYFzwPxBEQg"><i class="fab fa-youtube"></i></a>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- ====== Header End ====== -->
+						<!-- Botón de hamburguesa -->
+						<div class="menu-toggle">
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+						</div>
 
-    {% block content %}
-    {% endblock %}
+						<!-- Primary Navigation
+						============================================= -->
+						<nav class="primary-menu" >
 
-    <!-- ====== Footer Start ====== -->
-    <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
 
-      <div class="ud-footer-widgets">
-        <div class="container">
-          <div class="row justify-content-between">
-            <div class="col-xl-3 col-lg-4 col-md-6">
-              <div class="ud-widget">
-                <a href="/index.html" class="ud-footer-logo">
-                  <img src="/assets/images/logo/LOGO-RED_BLANCO.png" alt="logo" />
-                </a>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6">
-              <div class="ud-widget">
-                <div class="footer-icon d-flex justify-content-end">
-                  <a class="redes" target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
-                  <a class="redes" target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
-                  <a class="redes" target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
-                  <a class="redes" target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
-                  <a class="redes" target="_blank" href="https://www.youtube.com/channel/UCQwc62j7beStZYFzwPxBEQg"><i class="fab fa-youtube"></i></a>
+							<ul class="menu-container" style="border:none!important">
+								<li class="menu-item "><a class="menu-link" href="/index.html"><div>Inicio</div></a></li>
+                <li class="menu-item "><a class="menu-link" href="/municipios/index.html"><div>Municipios</div></a></li>
+                <li class="menu-item "><a class="menu-link btn" style="padding: 5px 10px!important;" href="/contacto/index.html"><div>Contacto</div></a></li>
+							</ul>
+
+						</nav><!-- #primary-menu end -->
+
+						
+
+						<div class="redes">
+							<a target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
+							<a target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
+							<a target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
+							<a target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
+							<a target="_blank" href="https://www.youtube.com/c/RedciudadanaOrgGt"><i class="fab fa-youtube"></i></a>
+						</div>
+
+						
+
+					</div>
+				</div>
+			</div>
+			<div class="header-wrap-clone"></div>
+		</header><!-- #header end -->
+
+		{% block content %}
+        {% endblock %} 
+
+				<!-- Footer
+		============================================= -->
+
+		<!-- footer-area-start -->
+        <footer>
+            <div class="footer-middle-area pt-80 pb-25" style="background-color: #03324e;  ">
+                <div class="container">
+                    <div class="row" style="justify-content:space-between">
+                        <div class="col-xl-4 col-lg-4 col-md-4">
+                            <div class="footer-wrapper mb-30">
+                                <div class="footer-logo">
+                                    <a target="_blank" href="https://redciudadana.org/"><img src="/assets/img/footer/logo_red_blanco.png" alt=""></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-9">
+                            <div class="d-flex align-items-center justify-content-end">
+                                <a target="_blank" style="margin:0 3px" href="https://www.facebook.com/Redciudadanagt"><img src="/assets/img/footer/fb-footer.png"></a>
+                                <a target="_blank" style="margin:0 3px" href="https://twitter.com/redxguate"><img src="/assets/img/footer/x-footer.png"></a>
+                                <a target="_blank" style="margin:0 3px" href="https://www.instagram.com/redxguate/"><img src="/assets/img/footer/ig-footer.png"></a>
+                                <a target="_blank" style="margin:0 3px" href="https://www.tiktok.com/@redxguate"><img src="/assets/img/footer/tk-footer.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-40 mb-40">
+                        <div class="col-xl-12 col-lg-12 col-md-12">
+                            <img src="/assets/img/footer/linea_blanca.png">
+                        </div>
+                    </div>
+                    <div class="footer-bottom-area pt-25 mb-45" style="border-top:none">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <div class="copyright text-center">
+                                    <a target="_blank" href="https://redciudadana.org/"><p style="color:#fff!important"><!--i class="far fa-copyright"></i> 2020 <a href="#">Fundee.</a--> Asociación Civil Red Ciudadana</p></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-12">
-              <div class="white_line"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12 text-center mb-4">
-              <p class="text-white mb-4">Asociación Civil Red Ciudadana</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-    </footer>
-    <!-- ====== Footer End ====== -->
+        </footer>
+        <!-- footer-area-end -->
 
-    <!-- ====== Back To Top Start ====== -->
-    <a href="javascript:void(0)" class="back-to-top">
-      <i class="lni lni-chevron-up"> </i>
-    </a>
-    <!-- ====== Back To Top End ====== -->
+	</div><!-- #wrapper end -->
 
-    <!-- ====== All Javascript Files ====== -->
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/wow.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script>
-      // ==== for menu scroll
-      const pageLink = document.querySelectorAll(".ud-menu-scroll");
+	<!-- Go To Top
+	============================================= -->
+	<div id="gotoTop" class="icon-angle-up"></div>
 
-      pageLink.forEach((elem) => {
-        elem.addEventListener("click", (e) => {
-          e.preventDefault();
-          document.querySelector(elem.getAttribute("href")).scrollIntoView({
-            behavior: "smooth",
-            offsetTop: 1 - 60,
-          });
-        });
-      });
+	<!-- JavaScripts
+	============================================= -->
+	<script src="/assets/js/jquery.js"></script>
+	<script src="/assets/js/plugins.min.js"></script>
 
-      // section menu active
-      function onScroll(event) {
-        const sections = document.querySelectorAll(".ud-menu-scroll");
-        const scrollPos =
-          window.pageYOffset ||
-          document.documentElement.scrollTop ||
-          document.body.scrollTop;
+	<!-- Footer Scripts
+	============================================= -->
+	<script src="/assets/js/functions.js"></script>
 
-        for (let i = 0; i < sections.length; i++) {
-          const currLink = sections[i];
-          const val = currLink.getAttribute("href");
-          const refElement = document.querySelector(val);
-          const scrollTopMinus = scrollPos + 73;
-          if (
-            refElement.offsetTop <= scrollTopMinus &&
-            refElement.offsetTop + refElement.offsetHeight > scrollTopMinus
-          ) {
-            document
-              .querySelector(".ud-menu-scroll")
-              .classList.remove("active");
-            currLink.classList.add("active");
-          } else {
-            currLink.classList.remove("active");
-          }
-        }
-      }
-
-      window.document.addEventListener("scroll", onScroll);
-    </script>
-
-    <script>
+	<script>
       if (window.netlifyIdentity) {
         window.netlifyIdentity.on('init', (user) => {
           if (!user) {
@@ -208,12 +164,43 @@
         });
       }
     </script>
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+    <!-- Preloader -->
+    <script>
+		(function ($) {
+			("use strict");
+			// Page loading
+			$(window).on("load", function () {
+				$("#preloader-active").delay(450).fadeOut("slow");
+				$("body").delay(450).css({
+					overflow: "visible"
+				});
+				$("#onloadModal").modal("show");
+			});
+		
+		})(jQuery);
+	</script>
 
+	<script>
+		document.addEventListener('DOMContentLoaded', function() {
+			// Agrega la funcionalidad del botón de hamburguesa
+			document.querySelector('.menu-toggle').addEventListener('click', function() {
+				var menuContainer = document.querySelector('.menu-container');
+
+				// Cambia el estilo de visualización del menú
+				if (menuContainer.style.display === 'none' || menuContainer.style.display === '') {
+					menuContainer.style.display = 'block';
+				} else {
+					menuContainer.style.display = 'none';
+				}
+			});
+		});
+	</script>
+	
     {% block body_javascripts %}
 
     {% endblock %}
 
-  </body>
+	</body>
 </html>
