--- a/src/index.njk
+++ b/src/index.njk
@@ -5,139 +5,126 @@ permalink: "index.html"
 {% extends "src/base.njk" %}
 
 {% block head %}
-<title>Lab Municipal | Red Ciudadana</title>
+<title>Interoperabilidad | Gobierno Digital</title>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 {% endblock %}
 
 {% block content %}
-    <!-- ====== Hero Start ====== -->
-    <section class="ud-hero" id="home">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
-              <h1 class="ud-hero-title">
-                Lab Municipal
-              </h1>
-              <p class="ud-hero-desc">
-                Busca entre los conjuntos de datos abiertos disponibles
-              </p>
-              <form action="#" class="search_bar">
-                <input type="text" id="fname" name="fname">
-                <i class="lupa fas fa-search"></i>
-              </form>
-              <div class="row">
-                <div class="col-lg-4 mb-4 mr-white">
-                  <h1 class="ud-hero-title mb-0">
-                    123
-                  </h1>
-                  <p class="ud-hero-desc">Estadídtica 1</p>
+
+        <!-- Slider
+		============================================= -->
+		<section id="slider" class="slider-element px-2">
+			<div class="container" style="padding: 0 0;">
+                <div class="row my-6 align-items-center">
+                    <div class="col-lg-6 my-4">
+                        <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Laboratorio de Municipalidades </h1>
+                        <p class="my-4" style="font-size: 25px!important;">Tiene como objetivo central facilitar la colaboración y la integración de datos entre entidades públicas y privadas en Guatemala. <br>
+                            
+                        </p>
+                        <a class="btn" href="/contacto/index.html">Únete al laboratorio</a>
+                    </div>
+                    <div class="col-lg-6 my-4">
+                        <img src="/assets/img/interoperabilidad/SLIDER 02.png">
+                    </div>
                 </div>
-                <div class="col-lg-4 mb-4 mr-white">
-                  <h1 class="ud-hero-title mb-0">
-                    456
-                  </h1>
-                  <p class="ud-hero-desc">Estadídtica 2</p>
+			</div>
+        </section>
+
+
+        <!-- Lineas de Accion
+        ============================================= -->
+
+        <section class="px-2" style="background-color: #03324e;">
+            <div class="container clearfix ">
+                <div class="row py-6">
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-19.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h1 class="text-titles">Programa de Formación</h1>
+                            <p class="mt-4">
+                                Capacitación a funcionarios públicos y representantes de entidades privadas en mejores prácticas y tecnologías de interoperabilidad.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-20.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h3 class="text-titles">Mediciones y Evaluación</h3>
+                            <p class="mt-4">
+                                Implementación de indicadores y métricas para evaluar el impacto de la interoperabilidad en la eficiencia administrativa y la satisfacción ciudadana.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-21.png" style="width: 120px; height: 120px; margin: auto;"> 
+                            <h3 class="text-titles">Centro de Asistencia Técnica</h3>
+                            <p class="mt-4">
+                                Provisión de soporte técnico continuo a las entidades participantes para la implementación y mantenimiento de soluciones de interoperabilidad.
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="col-lg-4 mb-4">
-                  <h1 class="ud-hero-title mb-0">
-                    321
-                  </h1>
-                  <p class="ud-hero-desc">Estadídtica 3</p>
+            </div>
+        </section>
+
+        <!-- Que es
+        ============================================= -->
+
+        <section class="px-2" style="background-color: #fff;">
+            <div class="container clearfix ">
+                <div class="row py-6 align-items-center">
+                    <div class="col-lg-6 my-4">
+                        <h1 class="text-titles">¿Qué es el Laboratorio Municipal?</h1>
+                        <p class="mt-4">
+                            La interoperabilidad gubernamental se refiere a la capacidad de las instituciones públicas para trabajar juntas de manera eficiente mediante el intercambio de información y el uso compartido de sistemas tecnológicos. En Guatemala, la implementación de sistemas digitales en las instituciones públicas ha sido un proceso aislado, con soluciones específicas para cada entidad sin una integración adecuada entre ellas. Esto ha llevado a una fragmentación de la información y a una gobernanza menos eficiente.
+                        </p>
+                        <!-- <p class="mt-4">
+                            <strong>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Netus et malesuada fames ac turpis egestas. Gravida cum sociis natoque penatibus et.
+                            </strong>
+                        </p> -->
+                    </div>
+
+                    <div class="col-lg-6 my-4">
+                        <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-18.png">
+                    </div>
+
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== Hero End ====== -->
+        </section>
 
-    <section id="" class="ud-section">
-      <div class="container">
-        <div class="row align-items-center">
-          
-          <div class="col-lg-12">
-            <div class="ud-section-title text-center mx-auto">
-              <span>¿Qué hacemos?</span>
-              <h2>Lorem Ipsum</h2>
+        <!-- Municipios
+        ============================================= -->
+
+        <section class="px-2 pt-5" style="background-color: #e9f0f8;">
+            <div class="container clearfix ">
+                <div class="row pt-5 justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="row">
+							{% for municipio in collections.municipio %}
+							<div class="col-lg-12 my-2">
+								<a href="{{municipio.url}}" class="categoria">
+									<div>{{municipio.data.municipio.departamento}}/{{municipio.data.municipio.municipio}}</div>
+								</a>
+							</div>
+							{% endfor %}
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
+        </section>
 
-          <div class="col-lg-4">
-            <div class="cuadro">
-              <img src="/assets/images/plalceholder.png">
-              <p>Cuadro explicativo 1</p>
-            </div>
-          </div>
 
-          <div class="col-lg-4">
-            <div class="cuadro">
-              <img src="/assets/images/plalceholder.png">
-              <p>Cuadro explicativo 2</p>
-            </div>
-          </div>
 
-          <div class="col-lg-4">
-            <div class="cuadro">
-              <img src="/assets/images/plalceholder.png">
-              <p>Cuadro explicativo 3</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <!-- ====== Conjuntos ====== -->
-    <section id="conjuntos" class="ud-faq">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-section-title text-center mx-auto">
-              <span>Municipios</span>
-              <h2>Revisa los municipios</h2>
-              <p>
-                Hecha un vistaso a los municipios donde encontrarás los conjuntos de datos.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3>Municipios Disponibles</h3>
-            <hr>
-  
-            {% for municipio in collections.municipio %}
-            <a href="{{municipio.url}}" class="categoria">
-              <div>{{municipio.data.municipio.departamento}}/{{municipio.data.municipio.municipio}}</div>
-            </a>
-            {% endfor %}
-
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== FAQ End ====== -->
 {% endblock %}
 
 {% block body_javascripts %}
-<script>
-  document.getElementById('copyLink').addEventListener('click', function() {
-    // Create a temporary input element
-    var input = document.createElement('input');
-    // Set its value to the link's href attribute
-    input.value = this.href;
-    // Append the input element to the document
-    document.body.appendChild(input);
-    // Select the input's value
-    input.select();
-    // Copy the selected text
-    document.execCommand('copy');
-    // Remove the temporary input element
-    document.body.removeChild(input);
-    // Log a message or perform any additional actions
-    console.log('Link copied to clipboard: ' + this.href);
-  });
-</script>
+
 {% endblock %}
