trabajo en tabs

--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -2841,3 +2841,35 @@ hr{
     margin: auto;
   }
 }
+
+.sidebar {
+
+  height: 100%;
+  background: #f8f9fa;
+  padding: 20px;
+  border-right: 1px solid #dee2e6;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  margin-bottom: 10px;
+}
+
+.sidebar ul li a {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
+}
+
